--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,6 +21,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: printenv
+      run: |
+        printenv
     - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v3
