--- a/.github/workflows/release_action.yml
+++ b/.github/workflows/release_action.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    if: contains(github.event.head_commit.message, '@release')
+    if: contains(github.event.head_commit.message, '|release')
     runs-on: ubuntu-latest
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
